# codex

./: .gitignore  README.md  environment.yaml  main.py  pyproject.toml  pyproject_prev.toml  requirements.txt  setup.py  test.txt  test_1.txt
__tutorial__/: learn_codex.ipynb
__tutorial__/nbs_old/: demo-dataset_evaluation.ipynb  demo-performance_by_interaction.ipynb
__tutorial_codex__/: script.py
__tutorial_codex__/__tutorial_legacy__/: README.md  codex_base.ipynb  demo-dataset_evaluation.ipynb  demo-dataset_split_evaluationxcomparison.ipynb  demo-performance_by_interaction.ipynb  learn_codex.ipynb  learn_codex_utils.py  setup_tutorial.ipynb
__tutorial_codex__/binning/: binning_abstract.txt  binning_protein.txt
__tutorial_codex__/configs/: config_abstract_example.json  config_abstract_example_dse.json  config_rareplanes_example.json  config_rareplanes_example_bt.json  config_rareplanes_example_dse.json  config_rareplanes_example_pbi.json
__tutorial_codex__/performance/: performance_rareplanes_example.json
__tutorial_codex__/splits/: split_abstract-sortedA.json  split_abstract.json
__tutorials__/: codex_base.ipynb  demo-dataset_split_evaluationxcomparison.ipynb  learn_codex.ipynb  learn_codex_utils.py
__tutorials__/binning/: bins-abstract-disc.txt
__tutorials__/datasets_tabular/: RarePlanes_Metadata.csv  RarePlanes_Metadata_Augmented_Processed_localized-tiled-controlpt_Binned.csv  abstract_fullfactorial_Binned.csv  abstract_native.csv  abstract_native_Binned.csv  abstract_native_disc.csv  abstract_skew.csv  abstract_skew_Binned.csv  abstract_subset-b1_d2-t2.csv  abstract_subset-b1_d2-t2_Binned.csv
__tutorials__/input/: demo_input-dataset_eval.json  demo_input-dataset_split_comparison.json  demo_input-model_probing.json  demo_input-performance_by_interaction.json  demo_input-performance_by_interaction_rp.json  input-TEMPLATE.json  input_TEMPLATERAREPLANES.json
__tutorials__/performance/: performance_00_ps.json  performance_0_0_all.json  performance_0_0_excl.json  performance_0_0_incl.json  performance_0_1_all.json  (+61 more)
codex/: __init__.py  codex.py  setup.py  test_cod.py
configs/: bin_scheme_TEMPLATE.txt  input_TEMPLATE.json  performance_TEMPLATE.json
docs/: codex.combinatorial.rst  codex.inputs.rst  codex.modes.rst  codex.modules.rst  codex.output.rst  codex.rst  codex.universe.rst  codex.utils.rst  codex.vis.rst  modules.rst
examples/: ctdemo_codex.ipynb  ctdemo_codex_completed.ipynb
resources/: binning_sample_abstract.txt  commands.txt  dataset_sample_abstract.csv  input_field_descriptions.md  mode_descriptions.md  split_performance_formatting.md
scripts/: __operator__.py
(+338 files in other folders)
