[build-system]
requires = ["setuptools >= 70.0", "wheel >= 0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "codex"
version = "2024.1.1"
requires-python = ">= 3.8"
dependencies = [
        "pandas>=2.1.0",
        "numpy>=1.24.1",
        "matplotlib",
        "seaborn",
        "statsmodels==0.14.2",

        "tqdm",
        "Pillow",
        "directory_tree==1.0.0"
]
authors = [
  {name = "Erin Lanus", email = "lanus@vt.edu"},
  {name = "Brian Lee", email = "leebri2n@vt.edu"}
]
maintainers = [
  {name = "Virginia Tech National Security Institute"}
]
description = "COverage for Datasets EXplorer (CODEX)"
readme = "README.md"
license = {text = "MIT License"}

[tool.setuptools.packages.find]
where = ["."]
include = ["codex", "codex.utils", "codex.modules"]