[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex"
version = "2024.1.2"
readme = "README.md"
requires-python = ">= 3.8"
license = "MIT"
keywords = []
authors = [
  {name = "Erin Lanus", email = "lanus@vt.edu"},
  {name = "Brian Lee", email = "leebri2n@vt.edu"}
]
dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "seaborn",
  "statsmodels",
  "scikit-learn",
  "tqdm",
  "directory_tree"
]

[tool.hatch.version]
path = "codex/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:codex}"

[tool.coverage.run]
source_pkgs = ["codex"]
branch = true
parallel = true
omit = [
  "codex/__about__.py",
]

[tool.coverage.paths]
codex = ["codex", "*/codex/codex"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]